Added lab-4: Eurika Server

--- a/lab-3-client/src/main/resources/bootstrap.yml
+++ b/lab-3-client/src/main/resources/bootstrap.yml
@@ -16,7 +16,7 @@ server:
 
 # Uncomment these lines to activate "northamerica" as the active profile.
 # Ordinarily we would not activate a profile from within a property file, but this is just a demo:
-#---
-#spring:
-#  profiles:
-#    active: northamerica
+---
+spring:
+  profiles:
+    active: northamerica
