added replication between 3 Eurika configured by 1 cloud config server

--- a/lab-4-sentence/src/main/resources/bootstrap.yml
+++ b/lab-4-sentence/src/main/resources/bootstrap.yml
@@ -1,5 +1,9 @@
 ---
 spring:
+  cloud:
+    config:
+      uri: http://localhost:8001
+
   profiles: sentence
   application:
     name: lab-4-sentence
