--- a/lab-4-article/src/main/resources/bootstrap.yml
+++ b/lab-4-article/src/main/resources/bootstrap.yml
@@ -1,5 +1,9 @@
 ---
 spring:
+  cloud:
+    config:
+      uri: http://localhost:8001
+
   profiles: article
   application:
     name: lab-4-article
